# bit

./: .gitignore  .nojekyll  CMakeLists.txt  ChangeLog.md  README.md  index.html  robots.txt  search.json  sitemap.xml
cmake/: add_executables.cmake  compiler_init.cmake  disable_in_source_builds.cmake
content/: index.html
content/bit_assert/: index.html
content/bit_assertion/: index.html
content/faq/: index.html
content/gauss/: access.html  constructors.html  functor.html  index.html  queries.html  solve.html
content/lu/: access.html  constructors.html  functor.html  index.html  invert.html  permute.html  queries.html
content/matrix/: access.html  add-pop.html  all.html  append.html  capacity.html  characteristic_polynomial.html  clear.html  companion.html  constructors.html  count.html  description.html  dot.html  echelon.html  from.html  index.html  invert.html  is_special.html  logical-op-eq.html  logical-op.html  polynomial_sum.html  pow.html  print.html  probability.html  random.html  replace.html  resize.html  set.html  set_if.html  shift.html  shrink_to_fit.html  size.html  specials.html  stream.html  sub.html  swap.html  to_string.html  to_vector.html  transpose.html  triangle.html
content/notes/: danilevsky.html  design.html  gf2.html  index.html  mod.html  reduction.html
content/polynomial/: access.html  arithmetic.html  constructors.html  count.html  degree.html  evaluation.html  formatter.html  index.html  monic.html  power.html  random.html  reduce.html  reference.html  shrink_to_fit.html  size.html  special.html  split.html  squared.html  stream.html  sub.html  times_x.html  to_string.html
content/vector/: access.html  all.html  append.html  blocks.html  capacity.html  clear.html  constructors.html  convolution.html  copy.html  count.html  description.html  diff.html  dot.html  first_set.html  formatter.html  from.html  if_set_call.html  index.html  indices.html  join.html  logical-op-eq.html  logical-op.html  polynomial_mod.html  polynomial_sum.html  push-pop.html  random.html  reference.html  replace.html  reserve.html  resize.html  riffled.html  riffled.qmd  set.html  set_if.html  shift.html  size.html  specials.html  stream.html  sub.html  swap.html  (+4 more)
content/verify/: index.html
docs/: README.md  _quarto.yml  _variables.yml  tmp.yml
docs/content/: _common.qmd  index.qmd
docs/pages/: _common.qmd  _latex-macros.qmd  index.qmd
examples/: README.md  charpoly.py  common.h  convolution.h  convolution01.cpp  convolution02.cpp  convolution03.cpp  danilevsky01.cpp  danilevsky02.cpp  formatter01.cpp  gauss01.cpp  gauss02.cpp  lu01.cpp  lu02.cpp  lu03.cpp  matrix00.cpp  matrix01.cpp  matrix02.cpp  matrix03.cpp  matrix04.cpp  matrix05.cpp  matrix06.cpp  matrix07.cpp  move01.cpp  polynomial01.cpp  polynomial02.cpp  polynomial03.cpp  polynomial_mod01.cpp  polynomial_mod02.cpp  polynomial_mod03.cpp  polynomial_sum01.cpp  pow01.cpp  reduce.h  reduce01.cpp  reduce02.cpp  reduce03.cpp  riffle01.cpp  scratch01.cpp  scratch02.cpp  scratch03.cpp  (+11 more)
include/bit/: bit.h  bit_assert.h  bit_assertion.h  danilevsky.h  gauss.h  lu.h  matrix.h  polynomial.h  vector.h  verify.h
pages/: index.html
pages/faq/: index.html
pages/gauss/: access.html  constructors.html  functor.html  index.html  queries.html  solve.html
pages/lu/: access.html  constructors.html  functor.html  index.html  invert.html  permute.html  queries.html
pages/matrix/: access.html  add-pop.html  all.html  append.html  capacity.html  characteristic_polynomial.html  clear.html  companion.html  constructors.html  count.html  description.html  dot.html  echelon.html  formatter.html  from.html  index.html  invert.html  is_special.html  logical-op-eq.html  logical-op.html  pow.html  print.html  probability.html  random.html  replace.html  resize.html  set.html  set_if.html  shift.html  shrink_to_fit.html  size.html  specials.html  stream.html  sub.html  swap.html  to_string.html  to_vector.html  transpose.html  triangle.html
pages/notes/: danilevsky.html  design.html  gf2.html  index.html  reduction.html
pages/polynomial/: access.html  arithmetic.html  constructors.html  count.html  degree.html  evaluation.html  formatter.html  index.html  monic.html  power.html  random.html  reduce.html  reference.html  shrink_to_fit.html  size.html  split.html  (+6 more)
(+302 files in other folders)
